--- a/src/app/my-app.css
+++ b/src/app/my-app.css
@@ -177,3 +177,37 @@ form span {
     }
 
 }
+
+@media (max-width: 320px) {
+  .body {
+    background: black;
+  }
+
+  form input {
+    border: none;
+    width: 530px;
+    height: 55px;
+    margin-top: 15px;
+    border-radius: 5px;
+    background-color: white;
+  }
+
+
+  form button {
+    border: none;
+    background-color: red;
+    color: white;
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 15px;
+    height: 50px;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 30px;
+  }
+
+    .row-text {
+      display: flex;
+      width: 100%;
+    }
+}
